[gd_scene load_steps=20 format=3 uid="uid://c77pkouv0v2ly"]

[ext_resource type="Script" path="res://sprites/enemies/evil_wizard/lightning_attack.gd" id="1_2w0wt"]
[ext_resource type="Texture2D" uid="uid://bl7n8rllp0tlf" path="res://sprites/enemies/evil_wizard/puddle.png" id="1_8kskp"]
[ext_resource type="Texture2D" uid="uid://cltfkjdkqdn2m" path="res://sprites/enemies/evil_wizard/lightning.png" id="2_ra6f1"]
[ext_resource type="AudioStream" uid="uid://cc1ssdaqqcuie" path="res://sprites/enemies/evil_wizard/Thunder Sound Effect.wav" id="3_4cahv"]

[sub_resource type="Curve" id="Curve_gl6ba"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_075em"]
max_value = 30.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.470588, 30), -16.4472, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_7yut2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_tdni6"]
curve_x = SubResource("Curve_gl6ba")
curve_y = SubResource("Curve_075em")
curve_z = SubResource("Curve_7yut2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kgj0t"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(30, 1, 1)
gravity = Vector3(0, 1000, 0)
scale_min = 0.1
scale_max = 2.0
scale_curve = SubResource("CurveXYZTexture_tdni6")
collision_mode = 2
collision_use_scale = true

[sub_resource type="Animation" id="Animation_hlmtk"]
resource_name = "puddle_grow"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("puddle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("puddle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.592157)]
}

[sub_resource type="Animation" id="Animation_c4tqk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("puddle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("puddle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lvqjq"]
resource_name = "puddle_fade"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("puddle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("puddle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvn4h"]
_data = {
"RESET": SubResource("Animation_c4tqk"),
"puddle_fade": SubResource("Animation_lvqjq"),
"puddle_grow": SubResource("Animation_hlmtk")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_koxxm"]
radius = 49.0408

[sub_resource type="Animation" id="Animation_jd0r6"]
resource_name = "strike"
length = 33.3333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lightning:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nrkvy"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lightning:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_r64ia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lightning:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5adby"]
_data = {
"RESET": SubResource("Animation_r64ia"),
"idle": SubResource("Animation_nrkvy"),
"strike": SubResource("Animation_jd0r6")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pef0j"]
polygon = PackedVector2Array(-44, 15, 102, 13, -15, 11)

[node name="Node2D" type="Node2D"]
texture_filter = 1
position = Vector2(639, 281)
script = ExtResource("1_2w0wt")

[node name="puddle" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_8kskp")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0, 0.75, 1, 0.819608)
z_index = 3000
position = Vector2(0, -730)
amount = 150
process_material = SubResource("ParticleProcessMaterial_kgj0t")
lifetime = 2.0
collision_base_size = 9.13
visibility_rect = Rect2(0, 0, 300, 1000)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lvn4h")
}
autoplay = "puddle_grow"

[node name="lightning" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 2999
position = Vector2(-1, -309)
texture = ExtResource("2_ra6f1")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4cahv")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_koxxm")

[node name="lightning_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5adby")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(-11, -4)
occluder = SubResource("OccluderPolygon2D_pef0j")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
